[project]
name = "cli-tool-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "33910786+thiagoeh@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cli-tool-playground = "cli_tool_playground:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
